# backend-rails/config/routes.rb
@@ -6,6 +6,10 @@ Rails.application.routes.draw do
       post 'auth/login', to: 'auth#login'
       post 'auth/logout', to: 'auth#logout'
       get 'auth/session', to: 'auth#show'
+      get 'admin/elections', to: 'admin/elections#index'
+      post 'admin/elections', to: 'admin/elections#create'
+      get 'admin/elections/:id', to: 'admin/elections#show'
+      patch 'admin/elections/:id', to: 'admin/elections#update'
       get 'admin/elections/:election_id/parties', to: 'admin/parties#index'
       post 'admin/elections/:election_id/parties', to: 'admin/parties#create'
       patch 'admin/elections/:election_id/parties/:id', to: 'admin/parties#update'
